change wait button, code optimization

--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="Button" class="{{classes}}">{{text}}</button>
+<button id="{{classes}}" class="Button" class="{{classes}}">{{text}}</button>
